--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+:root{
+    scroll-behavior: smooth;
+}
 *{
     padding: 0;
     margin: 0;
@@ -52,6 +55,8 @@ button{
     color:#fff;
     font-size: 16px;
     margin-bottom: 10px;
+    transition: 0.3s;
+    cursor: pointer;
 }
 button:hover{
     background: rgb(236, 36, 3);
@@ -64,7 +69,7 @@ button:hover{
 main{
     width: 100%;
     height:100vh;
-    background-image: url(./images/header.jpeg);
+    background-image: url(../images/header.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -78,6 +83,7 @@ main{
 }
 nav{
     margin-bottom: 300px;
+    padding-top: 20px;
 }
 .logo{
     color: #ff305b;
@@ -95,6 +101,7 @@ nav{
     color: #fff;
     margin-right:20px;
     font-size: 18px;
+    transition: 0.3s;
 }
 .nav-buttons-container li a:hover{
     color: #ff305b;
@@ -156,11 +163,17 @@ nav{
     align-items: center;
     justify-content: center;
 }
-.img-cover svg{
+.img-cover i, 
+#footer i{
     margin-left:10px;
+    font-size: 20px;
+    color: #fff;
+    transition: 0.3s;
+    cursor: pointer;
 }
-.img-cover svg:hover path{
-    fill: #ff305b;
+.img-cover i:hover,
+#footer i:hover{
+    color: #ff305b;
 }
 .img-and-cover-container:hover .img-cover{
     transform:translateY(0%);
@@ -205,7 +218,6 @@ nav{
 #Our-Statistics{
     background: #f1f1f1;
     padding: 80px 0px 30px;
-
 }
 .services-cards-container,
 .Our-Statistics-cards-container{
@@ -224,6 +236,10 @@ nav{
    font-size: 18px;
    transition-duration: 0.5s;
 }
+.Statistics-card i{
+    font-size: 30px;
+    color:#ff305b;
+}
 .card-title{
     font-size: 24px;
     font-weight: 600;
@@ -234,8 +250,13 @@ nav{
     border-radius: 5px;
     transition-duration: 0.5s;
 }
-.service-card:hover svg{
-    width: 45px !important;
+.service-card i{
+    font-size: 22px;
+    color:#ff305b;
+    transition: 0.3s;
+}
+.service-card:hover i{
+    font-size: 25px;
 }
 
 
@@ -277,21 +298,22 @@ nav{
 }
 .portfolio-card-cover{
     position: absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
+    inset: 0;
     background-color: rgba(0, 0, 0, 0.57);
     opacity: 0;
-    transition-duration: 0.5s;
+    transition: opacity 0.5s;
     display: flex;
     justify-content: end;
     align-items: end;
-    padding: 15px;
+}
+.portfolio-card-cover i{
+    margin: 15px;
+    font-size: 20px;
+    cursor: pointer;
+    color:#ff305b;
 }
 .portfolio-card:hover .portfolio-card-cover{
     opacity: 1;
-    transition-duration: 0.5s;
 }
 
 
@@ -333,6 +355,9 @@ nav{
     max-width: 600px;
     width: fit-content;
     padding: 40px 40px 40px 0;
+}
+.feedback-content i.fa-star{
+    color:#FFD43B;
 }
 .client-name{
     font-size: 26px;
@@ -454,26 +479,4 @@ form button{
 }
 #footer span{
     color: #ff305b;
-}
-
-
-
-
-/* responsive */
-@media (max-width: 768px){
-    .about-content-container{
-        justify-content: center;
-    }
-    .about-img{
-        margin-bottom: 50px;
-    }
-    .img-border{
-        border:none;
-    }
-    .about-info li{
-        width: 100%;
-    }
-    .feedback-content{
-        padding: 40px;
-    }
 }
